// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./docs/.vuepress/components/demo/alert/arrow.vue correctly 1`] = `
<section class="box">
  <div class="top">
    <div class="nova-ui-alert nova-ui-alert-success nova-ui-alert-placement-top-start nova-ui-alert-border nova-ui-alert-has-arrow">
      <div class="nova-ui-alert-icon nova-ui-alert-icon-success"></div>
      <!----><span>上左</span>
      <div class="nova-ui-alert-arrow"></div>
    </div>
    <div class="nova-ui-alert nova-ui-alert-success nova-ui-alert-placement-top nova-ui-alert-border nova-ui-alert-has-arrow">
      <div class="nova-ui-alert-icon nova-ui-alert-icon-success"></div>
      <!----><span>上</span>
      <div class="nova-ui-alert-arrow"></div>
    </div>
    <div class="nova-ui-alert nova-ui-alert-success nova-ui-alert-placement-top-end nova-ui-alert-border nova-ui-alert-has-arrow">
      <div class="nova-ui-alert-icon nova-ui-alert-icon-success"></div>
      <!----><span>上右</span>
      <div class="nova-ui-alert-arrow"></div>
    </div>
  </div>
  <div class="left">
    <div class="nova-ui-alert nova-ui-alert-success nova-ui-alert-placement-left-start nova-ui-alert-border nova-ui-alert-has-arrow">
      <div class="nova-ui-alert-icon nova-ui-alert-icon-success"></div>
      <!----><span>左上</span>
      <div class="nova-ui-alert-arrow"></div>
    </div>
    <div class="nova-ui-alert nova-ui-alert-success nova-ui-alert-placement-left nova-ui-alert-border nova-ui-alert-has-arrow">
      <div class="nova-ui-alert-icon nova-ui-alert-icon-success"></div>
      <!----><span>左</span>
      <div class="nova-ui-alert-arrow"></div>
    </div>
    <div class="nova-ui-alert nova-ui-alert-success nova-ui-alert-placement-left-end nova-ui-alert-border nova-ui-alert-has-arrow">
      <div class="nova-ui-alert-icon nova-ui-alert-icon-success"></div>
      <!----><span>左下</span>
      <div class="nova-ui-alert-arrow"></div>
    </div>
  </div>
  <div class="right">
    <div class="nova-ui-alert nova-ui-alert-success nova-ui-alert-placement-right-start nova-ui-alert-border nova-ui-alert-has-arrow">
      <div class="nova-ui-alert-icon nova-ui-alert-icon-success"></div>
      <!----><span>右上</span>
      <div class="nova-ui-alert-arrow"></div>
    </div>
    <div class="nova-ui-alert nova-ui-alert-success nova-ui-alert-placement-right nova-ui-alert-border nova-ui-alert-has-arrow">
      <div class="nova-ui-alert-icon nova-ui-alert-icon-success"></div>
      <!----><span>右</span>
      <div class="nova-ui-alert-arrow"></div>
    </div>
    <div class="nova-ui-alert nova-ui-alert-success nova-ui-alert-placement-right-end nova-ui-alert-border nova-ui-alert-has-arrow">
      <div class="nova-ui-alert-icon nova-ui-alert-icon-success"></div>
      <!----><span>右下</span>
      <div class="nova-ui-alert-arrow"></div>
    </div>
  </div>
  <div class="bottom">
    <div class="nova-ui-alert nova-ui-alert-success nova-ui-alert-placement-bottom-start nova-ui-alert-border nova-ui-alert-has-arrow">
      <div class="nova-ui-alert-icon nova-ui-alert-icon-success"></div>
      <!----><span>下左</span>
      <div class="nova-ui-alert-arrow"></div>
    </div>
    <div class="nova-ui-alert nova-ui-alert-success nova-ui-alert-placement-bottom nova-ui-alert-border nova-ui-alert-has-arrow">
      <div class="nova-ui-alert-icon nova-ui-alert-icon-success"></div>
      <!----><span>下</span>
      <div class="nova-ui-alert-arrow"></div>
    </div>
    <div class="nova-ui-alert nova-ui-alert-success nova-ui-alert-placement-bottom-end nova-ui-alert-border nova-ui-alert-has-arrow">
      <div class="nova-ui-alert-icon nova-ui-alert-icon-success"></div>
      <!----><span>下右</span>
      <div class="nova-ui-alert-arrow"></div>
    </div>
  </div>
</section>
`;

exports[`renders ./docs/.vuepress/components/demo/alert/basic.vue correctly 1`] = `
<section>
  <div class="nova-ui-alert nova-ui-alert-success nova-ui-alert-placement-bottom nova-ui-alert-border nova-ui-alert-block">
    <div class="nova-ui-alert-icon nova-ui-alert-icon-success"></div>
    <!---->Success Text<div class="nova-ui-alert-arrow"></div>
  </div>
</section>
`;

exports[`renders ./docs/.vuepress/components/demo/alert/block.vue correctly 1`] = `
<section>
  <div class="nova-ui-alert nova-ui-alert-success nova-ui-alert-placement-bottom nova-ui-alert-border">
    <div class="nova-ui-alert-icon nova-ui-alert-icon-success"></div>
    <!---->Success Text<div class="nova-ui-alert-arrow"></div>
  </div>
  <div class="nova-ui-alert nova-ui-alert-info nova-ui-alert-placement-bottom nova-ui-alert-border">
    <div class="nova-ui-alert-icon nova-ui-alert-icon-info"></div>
    <!---->Info Text<div class="nova-ui-alert-arrow"></div>
  </div>
  <div class="nova-ui-alert nova-ui-alert-help nova-ui-alert-placement-bottom nova-ui-alert-border">
    <div class="nova-ui-alert-icon nova-ui-alert-icon-help"></div>
    <!---->Help Text<div class="nova-ui-alert-arrow"></div>
  </div>
  <div class="nova-ui-alert nova-ui-alert-warning nova-ui-alert-placement-bottom nova-ui-alert-border">
    <div class="nova-ui-alert-icon nova-ui-alert-icon-warning"></div>
    <!---->Warning Text<div class="nova-ui-alert-arrow"></div>
  </div>
  <div class="nova-ui-alert nova-ui-alert-error nova-ui-alert-placement-bottom nova-ui-alert-border">
    <div class="nova-ui-alert-icon nova-ui-alert-icon-error"></div>
    <!---->Error Text<div class="nova-ui-alert-arrow"></div>
  </div>
</section>
`;

exports[`renders ./docs/.vuepress/components/demo/alert/border.vue correctly 1`] = `
<section>
  <div class="nova-ui-alert nova-ui-alert-success nova-ui-alert-placement-bottom nova-ui-alert-block">
    <div class="nova-ui-alert-icon nova-ui-alert-icon-success"></div>
    <!---->Success Text<div class="nova-ui-alert-arrow"></div>
  </div>
  <div class="nova-ui-alert nova-ui-alert-info nova-ui-alert-placement-bottom nova-ui-alert-block">
    <div class="nova-ui-alert-icon nova-ui-alert-icon-info"></div>
    <!---->Info Text<div class="nova-ui-alert-arrow"></div>
  </div>
  <div class="nova-ui-alert nova-ui-alert-help nova-ui-alert-placement-bottom nova-ui-alert-block">
    <div class="nova-ui-alert-icon nova-ui-alert-icon-help"></div>
    <!---->Help Text<div class="nova-ui-alert-arrow"></div>
  </div>
  <div class="nova-ui-alert nova-ui-alert-warning nova-ui-alert-placement-bottom nova-ui-alert-block">
    <div class="nova-ui-alert-icon nova-ui-alert-icon-warning"></div>
    <!---->Warning Text<div class="nova-ui-alert-arrow"></div>
  </div>
  <div class="nova-ui-alert nova-ui-alert-error nova-ui-alert-placement-bottom nova-ui-alert-block">
    <div class="nova-ui-alert-icon nova-ui-alert-icon-error"></div>
    <!---->Error Text<div class="nova-ui-alert-arrow"></div>
  </div>
</section>
`;

exports[`renders ./docs/.vuepress/components/demo/alert/closable.vue correctly 1`] = `
<section>
  <div class="nova-ui-alert nova-ui-alert-warning nova-ui-alert-placement-bottom nova-ui-alert-border nova-ui-alert-block nova-ui-alert-closable">
    <div class="nova-ui-alert-icon nova-ui-alert-icon-warning"></div>
    <div class="nova-ui-alert-close">
      <div class="nova-ui-alert-close-icon"></div>
    </div>Warning Text Warning Text Warning Text Warning Text Warning Text Warning
    TextWarning Text
    <div class="nova-ui-alert-arrow"></div>
  </div>
  <div class="nova-ui-alert nova-ui-alert-error nova-ui-alert-placement-bottom nova-ui-alert-border nova-ui-alert-block nova-ui-alert-closable">
    <div class="nova-ui-alert-icon nova-ui-alert-icon-error"></div>
    <div class="nova-ui-alert-close">
      <div class="nova-ui-alert-close-icon"></div>
    </div>Error Description Error Description Error Description Error Description
    Error Description Error Description
    <div class="nova-ui-alert-arrow"></div>
  </div>
</section>
`;

exports[`renders ./docs/.vuepress/components/demo/alert/style.vue correctly 1`] = `
<section>
  <div class="nova-ui-alert nova-ui-alert-success nova-ui-alert-placement-bottom nova-ui-alert-border nova-ui-alert-block">
    <div class="nova-ui-alert-icon nova-ui-alert-icon-success"></div>
    <!---->Success Text<div class="nova-ui-alert-arrow"></div>
  </div>
  <div class="nova-ui-alert nova-ui-alert-info nova-ui-alert-placement-bottom nova-ui-alert-border nova-ui-alert-block">
    <div class="nova-ui-alert-icon nova-ui-alert-icon-info"></div>
    <!---->Info Text<div class="nova-ui-alert-arrow"></div>
  </div>
  <div class="nova-ui-alert nova-ui-alert-help nova-ui-alert-placement-bottom nova-ui-alert-border nova-ui-alert-block">
    <div class="nova-ui-alert-icon nova-ui-alert-icon-help"></div>
    <!---->Help Text<div class="nova-ui-alert-arrow"></div>
  </div>
  <div class="nova-ui-alert nova-ui-alert-warning nova-ui-alert-placement-bottom nova-ui-alert-border nova-ui-alert-block">
    <div class="nova-ui-alert-icon nova-ui-alert-icon-warning"></div>
    <!---->Warning Text<div class="nova-ui-alert-arrow"></div>
  </div>
  <div class="nova-ui-alert nova-ui-alert-error nova-ui-alert-placement-bottom nova-ui-alert-border nova-ui-alert-block">
    <div class="nova-ui-alert-icon nova-ui-alert-icon-error"></div>
    <!---->Error Text<div class="nova-ui-alert-arrow"></div>
  </div>
</section>
`;
